📱 Fix gap project mobile view

--- a/src/styles/pages/Home.module.scss
+++ b/src/styles/pages/Home.module.scss
@@ -61,6 +61,7 @@
   gap: 180px;
   @include for-phone-only {
     margin-top: 100px;
+    gap: 120px;
   }
 }
 
